# juego_m

./: CMakeLists.txt  Makefile  README.md  audio.cpp  audio.h  enemy.cpp  enemy.h  game.cpp  game.h  input.h  items.cpp  items.h  main.cpp  map.cpp  map.h  narrative.cpp  narrative.h  player.cpp  player.h  types.h
run game/: CMakeLists.txt
run game/include/: entity.h  map.h  renderer.h  types.h
run game/srcs/: entity.cpp  main (4).cpp  map.cpp  renderer.cpp
